# 2009scape-rust

./: Cargo.toml  README.md
.agent/: AGENT.md
crates/cache-tool/: Cargo.toml
crates/cache-tool/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/client/src/audio/: mod.rs
crates/client/src/cache/: loader.rs  mod.rs
crates/client/src/combat/: mod.rs
crates/client/src/entity/: mod.rs
crates/client/src/game/: mod.rs
crates/client/src/input/: mod.rs
crates/client/src/net/: login.rs  mod.rs  protocol.rs  transport.rs
crates/client/src/render/: camera.rs  entity_renderer.rs  font.rs  mod.rs  renderer2d.rs  renderer3d.rs  shader2d.wgsl  shader3d.wgsl
crates/client/src/skills/: mod.rs
crates/client/src/web/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: buffer.rs  isaac.rs  lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: main.rs
