[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/common",
    "crates/proxy",
    "crates/cache-tool",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["baseb"]

[workspace.dependencies]
# Math
glam = "0.29"

# Rendering
wgpu = "24"
winit = "0.30"

# Networking
tokio = { version = "1", features = ["full"] }

# Serialization
byteorder = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# WASM support
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# Compression
flate2 = "1"
bzip2 = "0.5"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
once_cell = "1"
pollster = "0.4"
futures-util = "0.3"
